--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^4.0.4
   flutter:
     sdk: flutter
   get: ^4.3.8
+  http: ^0.13.4
+  json_to_model: ^3.0.3
   ms_undraw: ^3.0.1+1
   percent_indicator: ^3.4.0
   pull_to_refresh: ^2.0.0
