--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,22 +28,42 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  auto_animated: ^3.0.1
   awesome_dialog: ^2.1.2
+  cached_network_image: ^3.2.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
+  email_validator: ^2.0.1
+  enhanced_future_builder: ^1.0.3
   flutter:
     sdk: flutter
+  flutter_date_pickers: ^0.2.0
+  flutter_datetime_picker: ^1.5.1
+  flutter_launcher_icons: ^0.9.2
   get: ^4.3.8
   http: ^0.13.4
+  image_picker: ^0.8.4+11
+  intl: ^0.17.0
+  jiffy: ^5.0.0
   json_to_model: ^3.0.3
+  lottie: ^1.3.0
   ms_undraw: ^3.0.1+1
+  open_document: ^1.0.4
+  path_provider: ^2.0.9
+  pdf: ^3.7.1
   percent_indicator: ^3.4.0
+  permission_handler: ^9.2.0
   pull_to_refresh: ^2.0.0
   responsive_grid: ^2.0.0
+  shared_preferences: ^2.0.12
   sizer: ^2.0.15
 
 dev_dependencies:
   flutter_lints: ^1.0.0
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo_one2.jpeg"
   flutter_test:
     sdk: flutter
 
@@ -58,9 +78,10 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logo_github.png
-    - assets/images/logo_one.jpeg
+    - assets/images/
+    - assets/93134-not-found.json
     - assets/list_pekerjaan.json
+    - assets/fonts/Poppins/Poppins-Regular.ttf
     #   - images/a_dot_ham.jpeg
     # - assets/product.json
   # An image asset can refer to one or more resolution-specific "variants", see
